--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <p>Earn USDT by watching ads</p>
             <div style="margin-top: 10px; font-size: 12px; opacity: 0.8;">
                 <span>Developed by </span>
-                <a href="https://t.me/saanvi341" target="_blank" style="color: rgba(255,255,255,0.9); text-decoration: underline;">@saanvi341</a>
+                <a href="https://t.me/Babu20001" target="_blank" style="color: rgba(255,255,255,0.9); text-decoration: underline;">@TechDev</a>
             </div>
         </div>
         
@@ -391,8 +391,17 @@
                     <button class="btn" id="watchAdBtn" onclick="watchAd()">
                         <span id="watchBtnText">Watch Ad (+10 points)</span>
                     </button>
-                </div>
-                
+                </div><br>
+                <!-- Add this in the <head> section if Bootstrap is not already included -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Telegram Bot Button -->
+<div class="text-center mt-5">
+  <a href="https://t.me/trxdoublersv1_bot" class="btn btn-primary btn-lg" target="_blank">
+    🚀 Start TRX Doubler Bot
+  </a>
+</div>
+<br>
                 <div class="section">
                     <h2><span class="section-icon">🤖</span>Auto Mode</h2>
                     <p style="color: #666; margin-bottom: 15px;">Automatically watch ads every 25 seconds</p>
