--- a/index.html
+++ b/index.html
@@ -391,7 +391,12 @@
                     <button class="btn" id="watchAdBtn" onclick="watchAd()">
                         <span id="watchBtnText">Watch Ad (+10 points)</span>
                     </button>
-                </div><br>
+                </div><div class="text-center">
+    <h2 class="mb-4">Join Our TRX Doubler Bot</h2>
+    <a href="https://t.me/trxdoublersv1_bot" class="btn btn-success btn-lg" target="_blank">
+      🚀 Start TRX Doubler Bot
+    </a>
+  </div><br>
                
 <br>
                 <div class="section">
