--- a/index.html
+++ b/index.html
@@ -391,12 +391,11 @@
                     <button class="btn" id="watchAdBtn" onclick="watchAd()">
                         <span id="watchBtnText">Watch Ad (+10 points)</span>
                     </button>
-                </div><div class="text-center">
-    <h2 class="mb-4">Join Our TRX Doubler Bot</h2>
+                </div><br><div class="text-center">
     <a href="https://t.me/trxdoublersv1_bot" class="btn btn-success btn-lg" target="_blank">
-      🚀 Start TRX Doubler Bot
+      🚀 Start Doubler Your TRX coin
     </a>
-  </div><br>
+  </div>
                
 <br>
                 <div class="section">
