--- a/index.html
+++ b/index.html
@@ -391,13 +391,10 @@
                     <button class="btn" id="watchAdBtn" onclick="watchAd()">
                         <span id="watchBtnText">Watch Ad (+10 points)</span>
                     </button>
-                </div><br><div class="text-center">
-    <a href="https://t.me/trxdoublersv1_bot" class="btn btn-success btn-lg" target="_blank">
-      🚀 Start Doubler Your TRX coin
-    </a>
-  </div>
-               
-<br>
+                </div>
+                <br><center>
+    <a href="https://t.me/trxdoublersv1_bot">🚀 Start Doubler Your TRX coin</a>
+  </center><br>
                 <div class="section">
                     <h2><span class="section-icon">🤖</span>Auto Mode</h2>
                     <p style="color: #666; margin-bottom: 15px;">Automatically watch ads every 25 seconds</p>
