--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                         <span id="watchBtnText">Watch Ad (+10 points)</span>
                     </button>
                 </div>
-                <br><center><br><iframe src="https://ad2bitcoin.com/ad.php?ref=Sneha55&width=728" marginwidth="0" marginheight="0" width="728" height="90" scrolling="no" border="0" frameborder="0"></iframe><br>
+                <br><center><iframe src="https://ad2bitcoin.com/ad.php?ref=Sneha55&width=728" marginwidth="0" marginheight="0" width="728" height="90" scrolling="no" border="0" frameborder="0"></iframe><br>
     <a href="https://t.me/trxdoublersv1_bot">🚀 Start Doubler Your TRX coin</a>
   </center><br>
                 <div class="section">
